--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.1",
+    "cleave.js": "^1.6.0",
+    "firebase": "^10.4.0",
+    "formik": "^2.4.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
