--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.3.1",
+    "@sweetalert2/theme-dark": "^5.0.15",
     "cleave.js": "^1.6.0",
     "firebase": "^10.4.0",
     "formik": "^2.4.4",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
-    "spinners-react": "^1.0.7"
+    "react-toastify": "^9.1.3",
+    "reactstrap": "^9.2.0",
+    "spinners-react": "^1.0.7",
+    "sweetalert2": "^11.6.13",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
